--- a/html/table3.html
+++ b/html/table3.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>실습3</title>
+    <title>실습4</title>
 </head>
+<!-- 5행3열 테이블 생성 : table>tr*5>td*3 -->
 <body>
     <table border="1px solid black" width = "300" height="200">
         <tr>
-            <td rowspan="4">1</td>
-            <td>2</td>
+            <td colspan="2">2</td>
+            <td rowspan="6">7</td>
         </tr>
         <tr>
+            <td rowspan="3">1</td>
             <td>3</td>
         </tr>
         <tr>
