add practice file

--- a/html/form.html
+++ b/html/form.html
@@ -22,8 +22,21 @@
         <input type="button" value="일반 버튼">
 
         <input type="reset" value="리셋">
+        <br><br>
+        <input type="radio" id="html1" name="info">
+        <label for="html1"> 라디오1 </label>
+        <br>
+        <input type="radio" id="html2" name="info">
+        <label for="html2"> 라디오2 </label>
+        <br>
+        <input type="radio" id="html3" name="info">
+        <label for="html3"> 라디오3 </label>
+        <br>
+        <input type="radio" id="html4" name="info">
+        <label for="html4"> 라디오4 </label>
+        <br>
 
-        <input type="radio" id="html" >
+        
     </form>
 </body>
 </html>
