commit the CSS code source studied on May 11th

--- a/220510html/practice01.html
+++ b/220510html/practice01.html
@@ -5,29 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        .video-container{
-            width: 100px;
-            height: 100px;
-        }
-    </style>
+    <link rel="stylesheet" href="practice01.css">
     <title>실습1</title>
 </head>
 
 <body>
     <h1>mp4 플레이 리스트</h1>
-    <span class="video-container">
+    <div class="video-container">
         <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/WhatCarCanYouGetForAGrand.mp4"
             controls></video>
         <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/WhatCarCanYouGetForAGrand.mp4"
             controls></video>
         <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/WhatCarCanYouGetForAGrand.mp4"
             controls></video>
-    </span>
+    </div>
 
     <h1>유튜브 플레이 리스트</h1>
 
-    <span class="video-container">
+    <div class="video-container">
         <iframe src="https://www.youtube.com/embed/dDiGAHOtIII" title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
@@ -37,7 +32,7 @@
         <iframe src="https://www.youtube.com/embed/dDiGAHOtIII" title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
-    </span>
+    </div>
 
 </body>
 
