commit jQuery practice

--- a/study-jQuery/jqueryPac2.html
+++ b/study-jQuery/jqueryPac2.html
@@ -18,7 +18,7 @@
                 });
             });
             $('#check-confirm-button').click(function(){
-                if ($(':checkbox[name=mycheck').is(';checked')== true){
+                if ($(':checkbox[name=mycheck]').is('checked')== true){
                     $('#result').text() = 'OK';
                 } else {
                     $('#result').text() = 'NO';
