--- a/study-jQuery/jump.html
+++ b/study-jQuery/jump.html
@@ -36,7 +36,7 @@
     <script>
         $(function () {
             $(document).keydown(function (event) {
-                if (event.key == 32) {
+                if (event.key == "32") {
                     $("#char").animate({
                         top: "-=150px"
                     });
