--- a/study-jQuery/mario-game.html
+++ b/study-jQuery/mario-game.html
@@ -32,7 +32,7 @@
             position: absolute;
             width: 200%;
             height: 100%;
-            background: url("/assets/background.jpg");
+            background: url("../assets/background.jpg");
             background-size: contain;
             animation-name: bg-slide;
             animation-duration: 20s;
