--- a/study-jQuery/jQuery-practice1.html
+++ b/study-jQuery/jQuery-practice1.html
@@ -1,55 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>실습1
+        </title>
+        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    </head>
+    <!-- onload => body안의 모든 dom 생성후에 수행 함수 지정 -->
+    <body>
+        <style>
+            h1 {
+                text-align: center;
+                margin: 100px;
+            }
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>실습1</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <style>
-        #container {
-            text-align: center;
-        }
-    </style>
-    <script>
-        let inputText = prompt('텍스트를 입력해 주세요', '텍스트 입력');
-        $(function () {
-            do {
-                if (inputText == '' || inputText == null) {
-                    alert('텍스트를 입력해 주세요');
-                    inputText = prompt('텍스트를 입력해 주세요', '텍스트 입력');
+            button {
+                display: inline-block;
+                width: 20%;
+                height: 50px;
+                margin: 5px;
+            }
+
+            .container {
+                display: flex;
+                width: 100%;
+                justify-content: center;
+            }
+
+            .red {
+                color: red;
+            }
+            .blue {
+                color: blue;
+            }
+            .green {
+                color: green;
+            }
+        </style>
+
+        <script>
+
+            $(() => {
+                // onload
+                text = prompt("텍스트를 입력해 주세요.");
+
+                if (!text) alert("텍스트를 반드시 입력해 주세요.");
+                else {
+                    $("#text").append(text);
                 }
-            } while (inputText.length <= 0);
-        });
 
-        $(function () {
-            $("#red").click(function () {
-                alert('빨간색으로 변경됩니다.');
-                $("#text").css("color", "red");
+                $("button").click(function () {
+                    $("#text").attr("class", $(this).attr("id"));
+                    alert(`${$(this).text()} 색으로 변경됩니다.`);
+                });
             });
-            $("#blue").click(function () {
-                alert('파란색으로 변경됩니다.');
-                $("#text").css("color", "blue");
-            });
-            $("#green").click(function () {
-                alert('초록색으로 변경됩니다.')
-                $("#text").css("color", "green");
-            });
-        });
-        $(function () {
-            $("#text").css("font-size", "50px");
-        });
-    </script>
-</head>
+        </script>
 
-<body>
-    <div id="container">
-        <div id="text">TEXT</div>
-        <button id="red">빨강</button>
-        <button id="blue">파랑</button>
-        <button id="green">초록</button>
-    </div>
-</body>
-
+        <h1 id="text"></h1>
+        <div class="container">
+            <button id="red">빨강</button>
+            <button id="blue">파랑</button>
+            <button id="green">초록</button>
+        </div>
+    </body>
 </html>
