commit reference code

--- a/study-jQuery/sign-up.html
+++ b/study-jQuery/sign-up.html
@@ -108,7 +108,7 @@
                     <td class="index">취미</td>
                     <td class="input">
                         <label><input type="checkbox" name="hobby" /> 개발</label>
-                        <label><input type="checkbox" name="hobby" /> 개임</label>
+                        <label><input type="checkbox" name="hobby" /> 게임</label>
                         <label><input type="checkbox" name="hobby" /> 낚시</label>
                         <br />
                         <label><input type="checkbox" name="hobby" /> 운동</label>
