modified title and png file

--- a/study-jQuery/move-image.html
+++ b/study-jQuery/move-image.html
@@ -45,7 +45,7 @@
         });
     </script>
     <div id="field">
-        <img id="gaeri" src="../assets/gaeri.jpg" alt="">
+        <img id="gaeri" src="../assets/mario.png" alt="">
     </div>
     
 </body>
