final touch, modified fetch address and file name

--- a/ajax/movie-list.html
+++ b/ajax/movie-list.html
@@ -16,7 +16,7 @@
         });
         
         function moveDetailsPage(detailsPage) {
-            window.location.href = `movie_detail_page.html?id=${detailsPage}`;
+            window.location.href = `movie-detail-page.html?id=${detailsPage}`;
         }
 
         function loadData() {
