--- a/vue/vue-practice2.html
+++ b/vue/vue-practice2.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
     <title>vue.js practice2</title>
 </head>
 
@@ -30,6 +31,9 @@
             created: function () {
                 //통신
                 this.getPosts();
+                
+                //디바운스 적용된 검색 함수 정의
+                this.debouncedSearch = _.debounce(this.search, 500);
             },
             methods: {
                 getPosts: function () {
@@ -40,12 +44,14 @@
                             v.posts = json;
                             v.filteredPosts = json;
                         })
+                },
+                search: function (val) {
+                    this.filteredPosts = this.posts.filter(post => post.title.includes(val))
                 }
             },
             watch: {
                 query: function (val) {
-                    this.filteredPosts = this.posts.filter(post => post.title.includes(val))
-                    console.log(val);
+                    this.debouncedSearch(val);
                 }
             }
         })
